@@ -180,3 +180,4 @@
 ( cvs diff -u -r 1.1.2.25 -r 1.1.2.26 src/rssyl.c;  ) > 0.26.0cvs2.patchset
 ( cvs diff -u -r 1.1.2.26 -r 1.1.2.27 src/parsers.c;  ) > 0.26.0cvs3.patchset
 ( cvs diff -u -r 1.1.2.27 -r 1.1.2.28 src/rssyl_gtk.c;  cvs diff -u -r 1.1.2.9 -r 1.1.2.10 src/rssyl_prefs.c;  ) > 0.26.0cvs4.patchset
+( cvs diff -u -r 1.1.2.113 -r 1.1.2.114 src/feed.c;  cvs diff -u -r 1.1.2.27 -r 1.1.2.28 src/parsers.c;  cvs diff -u -r 1.1.2.10 -r 1.1.2.11 src/rssyl_prefs.c;  ) > 0.26.0cvs5.patchset
