@@ -1,3 +1,12 @@
+2010-03-23 [ticho]	0.26.0cvs5
+
+	* src/feed.c
+		Fix potential memory leak.
+	* src/parsers.c
+		Parse proper "published" tag instead of bogus "issued".
+	* src/rssyl_prefs.c
+		Improve preference widgets layout.
+
 2010-03-18 [ticho]	0.26.0cvs4
 
 	* src/rssyl_gtk.c
